<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <group android:checkableBehavior="single">

    <item
        android:id="@+id/menu_myaccount"
        android:icon="@drawable/ic_baseline_account_box_24"
        android:title="@string/menu_myaccount" />
    <item
        android:id="@+id/menu_updateaccount"
        android:icon="@drawable/ic_baseline_edit_24"
        android:title="@string/menu_updateaccount" />
    <item
        android:id="@+id/menu_history"
        android:icon="@drawable/ic_baseline_history_24"
        android:title="@string/menu_history" />
    <item
        android:id="@+id/menu_exit"
        android:icon="@drawable/ic_baseline_exit_to_app_24"
        android:title="@string/menu_logout" />

  </group>

</menu>