<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/relativeprivacy"
        android:layout_width="match_parent"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/privacyTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_alignParentTop="true"
            android:layout_marginBottom="10dp"
            android:text="@string/title_privacy"
            android:gravity="center"
            android:fontFamily="@font/jiotype_bold"
            android:textColor="@color/Black"
            android:textSize="19sp"/>

        <TextView
            android:id="@+id/privacy_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Thank you for using R Ansh. Your privacy is important to us. To better protect your privacy, and to help ensure a rewarding experience for all users, we provide this privacy policy."
            android:fontFamily="@font/jiotype_medium"
            android:textColor="@color/Black"
            android:layout_below="@+id/privacyTitle"/>

        <TextView
            android:id="@+id/article1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/privacy_state"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/jiotype_bold"
            android:text="@string/article1_privacy"
            android:textColor="@color/Black"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/para1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/article1"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/jiotype_medium"
            android:text="@string/para1_privacy"
            android:textColor="@color/Black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/article2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/para1"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/jiotype_bold"
            android:text="@string/article2_privacy"
            android:textColor="@color/Black"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/para2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/article2"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/jiotype_medium"
            android:text="@string/para2_privacy"
            android:textColor="@color/Black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/article3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/para2"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/jiotype_bold"
            android:text="@string/article3_privacy"
            android:textColor="@color/Black"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/para3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/article3"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/jiotype_medium"
            android:text="@string/para3_privacy"
            android:textColor="@color/Black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/article4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/para3"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/jiotype_bold"
            android:text="@string/article4_privacy"
            android:textColor="@color/Black"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/para4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/article4"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/jiotype_medium"
            android:text="@string/para4_privacy"
            android:textColor="@color/Black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/article5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/para4"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/jiotype_bold"
            android:text="@string/article5_privacy"
            android:textColor="@color/Black"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/para5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/article5"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/jiotype_medium"
            android:text="@string/para5_privacy"
            android:textColor="@color/Black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/article6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/para5"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/jiotype_bold"
            android:text="@string/article6_privacy"
            android:textColor="@color/Black"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/para6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/article6"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/jiotype_medium"
            android:text="@string/para6_privacy"
            android:textColor="@color/Black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/article7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/para6"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/jiotype_bold"
            android:text="@string/article7_privacy"
            android:textColor="@color/Black"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/para7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/article7"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/jiotype_medium"
            android:text="@string/para7_privacy"
            android:textColor="@color/Black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/article8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/para7"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/jiotype_bold"
            android:text="@string/article8_privacy"
            android:textColor="@color/Black"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/para8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/article8"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/jiotype_medium"
            android:text="@string/para8_privacy"
            android:textColor="@color/Black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/article9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/para8"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/jiotype_bold"
            android:text="@string/article9_privacy"
            android:textColor="@color/Black"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/para9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/article9"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/jiotype_medium"
            android:text="@string/para9_privacy"
            android:textColor="@color/Black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/article10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/para9"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/jiotype_bold"
            android:text="@string/article10_privacy"
            android:textColor="@color/Black"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/para10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/article10"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/jiotype_medium"
            android:text="@string/para10_privacy"
            android:textColor="@color/Black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/article11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/para10"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/jiotype_bold"
            android:text="@string/article11_privacy"
            android:textColor="@color/Black"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/para11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/article11"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/jiotype_medium"
            android:text="@string/para11_privacy"
            android:textColor="@color/Black"
            android:layout_marginBottom="15dp"
            android:textSize="15sp" />

    </RelativeLayout>
</ScrollView>